.dev-workstream/fails/batch-20-keyed-topics/commit-2/tests/CycloneDDS.Runtime.Tests/Gen/TestMessage.Descriptor.cs
using System;
using CycloneDDS.Runtime;

namespace CycloneDDS.Runtime.Tests
{
    public partial struct TestMessage
    {
        private static readonly uint[] _ops = new uint[] {
67108864, 16973856, 4, 16973856, 8, 0};

        public static uint[] GetDescriptorOps() => _ops;

        private static readonly DdsKeyDescriptor[] _keys = new DdsKeyDescriptor[] {
        };
        public static DdsKeyDescriptor[] GetDescriptorKeys() => _keys;

        public static uint GetDescriptorFlagset() => 2;
    }
}
